apps/user-service/base/networkpolicies/allow-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-postgres

spec:
  podSelector:
    matchLabels:
      app: order-service

  policyTypes:
    - Egress

  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: postgresql

      ports:
        - protocol: TCP
          port: 5432
